<resources>
    <string name="app_name">Humblr</string>
    <string name="text_skip">Пропустить</string>
    <string name="text_ready">Готово</string>
    <string name="text_about_app">Найди единомышленников с Humblr</string>
    <string name="text_auth">Войти</string>
    <string name="text_search">Поиск</string>
    <string name="text_sublist">SubList</string>
    <string name="text_new">Новое</string>
    <string name="text_popular">Популярное</string>
    <string name="text_share">Share</string>
    <string name="text_subreddits">Сабреддиты</string>
    <string name="text_saved_list">Посты</string>
    <string name="text_information_not_available">Информация недоступна</string>
    <string name="text_friend_list">Список друзей</string>
    <string name="text_clear_saved">Очистить сохраненные</string>
    <string name="text_clear_saved_successfully">Сохраненные посты очищены успешно!</string>
    <string name="text_logout">Выйти</string>
    <string name="text_reply">Ответить</string>
    <string name="text_reply_count">Еще %s ответов →</string>
    <string name="text_send_to">Написать</string>
    <string name="text_follow">Подписаться</string>
    <string name="text_unfollow">В друзьях</string>
    <string name="text_see_all_comment">Смотреть комментарии</string>
    <string name="account_info">Сабреддиты: %s\n Комментарии %s</string>
    <string name="text_add_comment">Введите комментарии...</string>

    <array name="text_onboard_text">
        <item>Добро пожаловать в Humblr</item>
        <item>SubHumblr</item>
        <item>Делись и сохраняй</item>
    </array>
    <array name="text_onboard_desc">
        <item>Здесь собраны сообщества по всевозможным интересам</item>
        <item>Ты можешь найти новые сабы по интересам и посмотреть сабы, на которые подписан</item>
        <item>Вкладка избранное хранит закладки с комментариями и сабами. В профиле ты найдёшь
            информацию о себе.
        </item>
    </array>
</resources>