<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main_background_light1">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_reddit_auth_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_app_name"
        style="@style/TextOnboard40sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/toolbar_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/txt_about_app"
        style="@style/TextOnboard12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_about_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_app_name" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_about_app">

        <TextView
            android:id="@+id/btn_auth"
            android:layout_width="250dp"
            android:layout_height="57dp"
            android:background="@color/primaryColor"
            android:gravity="center"
            android:text="@string/text_auth"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>