<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/pb_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_10"
        android:indeterminateDrawable="@drawable/ic_loader"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/default_main_fragment_start_end_margin"
        android:layout_marginTop="@dimen/account_material_top"
        android:layout_marginEnd="@dimen/default_main_fragment_start_end_margin"
        android:layout_marginBottom="@dimen/default_main_fragment_bottom_margin">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_acc_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/default_main_fragment_start_end_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/material_avatar"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_marginStart="@dimen/margin_sr_listing_start_end"
                    android:layout_marginTop="@dimen/sr_list_iv_width"
                    app:cardCornerRadius="@dimen/default_search_radius"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/text_auth"
                        tools:src="@tools:sample/avatars" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/material_friend_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/friend_name_start_margin"
                    android:layout_marginTop="@dimen/friend_name_top_margin"
                    android:backgroundTint="@color/account_name_background"
                    app:cardCornerRadius="@dimen/default_main_fragment_start_end_margin"
                    app:layout_constraintStart_toEndOf="@id/material_avatar"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/txt_account_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:textAppearance="@style/TextAccountName20sp"
                        tools:text="@tools:sample/full_names" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/friend_name_start_margin"
                    android:layout_marginTop="@dimen/sr_list_item_card_bottom_margin"
                    android:backgroundTint="@color/account_name_background"
                    app:cardCornerRadius="@dimen/default_main_fragment_start_end_margin"
                    app:layout_constraintStart_toEndOf="@id/material_avatar"
                    app:layout_constraintTop_toBottomOf="@id/material_friend_name">

                    <TextView
                        android:id="@+id/txt_account_prefix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginEnd="@dimen/margin_10"
                        android:textAppearance="@style/TextAccountPrefix16sp"
                        tools:text="@tools:sample/full_names" />

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_friend_list"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="@dimen/sr_list_item_card_bottom_margin"
            android:backgroundTint="@color/primaryColor"
            app:cardCornerRadius="@dimen/default_search_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/material_acc_sub">

            <TextView
                android:id="@+id/txt_friend_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_friend_list"
                android:textAppearance="@style/TextWhiteTextColor14sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_clear_saved"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="@dimen/sr_list_item_card_bottom_margin"
            android:backgroundTint="@color/primaryColor"
            app:cardCornerRadius="@dimen/default_search_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/material_friend_list">

            <TextView
                android:id="@+id/txt_clear_saved"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_clear_saved"
                android:textAppearance="@style/TextWhiteTextColor14sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_logout"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="@dimen/default_search_radius"
            android:backgroundTint="@color/saved_icon"
            app:cardCornerRadius="@dimen/default_search_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/material_clear_saved">

            <TextView
                android:id="@+id/txt_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_logout"
                android:textAppearance="@style/TextWhiteTextColor14sp" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>